--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "cloudinary": "^1.14.0",
+    "cloudinary-react": "^1.1.0",
+    "datauri": "^2.0.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "if-env": "^1.0.4",
+    "mongoose": "^5.5.5",
+    "multer": "^1.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "react-encrypt": "^1.0.1",
