--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cloudinary": "^1.14.0",
     "cloudinary-react": "^1.1.0",
     "datauri": "^2.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "formidable": "^1.2.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.5.5",
     "multer": "^1.4.1",
