--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-encrypt": "^1.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.4",
-    "react-html5-camera-photo": "^1.4.0"
+    "react-html5-camera-photo": "^1.4.0",
+    "express-form-data": "^2.0.6"
   }
 }
