--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "datauri": "^2.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "express-form-data": "^2.0.6",
     "formidable": "^1.2.1",
     "if-env": "^1.0.4",
+    "mongodb": "^3.2.4",
     "mongoose": "^5.5.5",
     "multer": "^1.4.1",
     "passport-facebook": "^3.0.0",
@@ -34,7 +36,6 @@
     "react-encrypt": "^1.0.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.4",
-    "react-html5-camera-photo": "^1.4.0",
-    "express-form-data": "^2.0.6"
+    "react-html5-camera-photo": "^1.4.0"
   }
 }
